# barankin-tofpet

./: .gitignore  CMakeLists.txt  README.md  ReadMe_Michel  barankin.py  barankin_brute_force.py  barankin_lut.py  barankin_v2.py  barankin_v3.py  environment.yml  example_pdf.txt  pdfs.py  utils.py
Test/: ExampleOutput  Example_Command_to_test
binder/: environment.yml  postBuild
python/: barankin.py  main.py  main2.py
src/: BiExp.c  BiExpDeltaBarankinOrderJ.c
